@@ -33,7 +33,7 @@ use base qw(Exporter);
 use IO::Scalar;
 use Params::Validate qw(validate_with :types);
 use Digest::MD5 qw(md5_hex);
-use Debbugs::Mail qw(get_addresses);
+use Debbugs::Mail qw(get_addresses :reply);
 use Debbugs::MIME qw(decode_rfc1522 create_mime_message);
 use Debbugs::CGI qw(:url :html :util);
 use Debbugs::Common qw(globify_scalar english_join);
@@ -42,6 +42,7 @@ use Debbugs::Config qw(:config);
 use POSIX qw(strftime);
 use Encode qw(decode_utf8 encode_utf8);
 use URI::Escape qw(uri_escape);
+use Scalar::Util qw(blessed);
 
 BEGIN{
      ($VERSION) = q$Revision: 494 $ =~ /^Revision:\s+([^\s+])/;
@@ -138,9 +139,8 @@ sub display_entity {
     if ($param{outer} and
 	not $param{terse} and
 	not exists $param{att}) {
-	 my $header = $entity->head;
 	 print {$output} "<div class=\"headers\">\n";
-	 if ($param{trim_headers}) {
+         if ($param{trim_headers}) {
 	      my @headers;
 	      foreach (qw(From To Cc Subject Date)) {
 		   my $head_field = $head->get($_);
@@ -316,12 +316,17 @@ sub handle_email_message{
 
      my $output;
      my $output_fh = globify_scalar(\$output);
-     my $parser = MIME::Parser->new();
-     # Because we are using memory, not tempfiles, there's no need to
-     # clean up here like in Debbugs::MIME
-     $parser->tmp_to_core(1);
-     $parser->output_to_core(1);
-     my $entity = $parser->parse_data( $email);
+     my $entity;
+     if (not blessed $email) {
+         my $parser = MIME::Parser->new();
+         # Because we are using memory, not tempfiles, there's no need to
+         # clean up here like in Debbugs::MIME
+         $parser->tmp_to_core(1);
+         $parser->output_to_core(1);
+         $entity = $parser->parse_data( $email);
+     } else {
+         $entity = $email
+     }
      my @attachments = ();
      my $raw_output =
          display_entity(entity  => $entity,
@@ -437,8 +442,21 @@ sub handle_record{
 								options => {msg=>$msg_number,
 									    mbox=>'yes'}
 							       )
-						     ) .'">mbox</a>)'.":</p>\n";
-	  $output .= handle_email_message($record->{text},
+						     ) .'">mbox</a>, ';
+          my $parser = MIME::Parser->new();
+          # Because we are using memory, not tempfiles, there's no need to
+          # clean up here like in Debbugs::MIME
+          $parser->tmp_to_core(1);
+          $parser->output_to_core(1);
+          my $entity = $parser->parse_data($record->{text});
+          my $r_l = reply_headers($entity);
+          $output .= q(<a href=").
+              html_escape('mailto:'.$bug_number.'@'.$config{email_domain}.'?'.
+                          join('&',map {defined $r_l->{$_}?$_.'='.uri_escape($r_l->{$_}):()} keys %{$r_l})).
+                              qq(">reply</a>);
+
+          $output .= ')'.":</p>\n";
+	  $output .= handle_email_message($entity,
 					  ref     => $bug_number,
 					  msg_num => $msg_number,
                                           %param,
